Try to locate javafx in the launcher (#760)
* When javafx is missing, try to locate it in known location and restart the launcher. Else display a better error message

* Change code a bit and add a dialog to display javafx error

* Add a link to jackjt8's guide to the error message

* Forward the java options needed for javafx to chunky